--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Deletable Item List",
   "version": "1.0",
   "description": "Turns any list into a deletable item list.",
-  "permissions": ["storage", "activeTab", "scripting"],
+  "permissions": ["activeTab", "scripting"],
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
